UPDATE Applied dynatree production script instead of source

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -130,7 +130,7 @@
 
 	{# Dynatree #}
 	<script src="{{ asset('bundles/nsadmin/dynatree/jquery/jquery.cookie.js') }}"></script>
-	<script src="{{ asset('bundles/nsadmin/dynatree/src/jquery.dynatree.js') }}"></script>
+	<script src="{{ asset('bundles/nsadmin/dynatree/dist/jquery.dynatree.min.js') }}"></script>
 
     {# To only use a subset or add more js overwrite and copy paste this block
     To speed up page loads save a copy of jQuery in your project and override this block to include the correct path
