NEW Added JS confirm messages for ".ns-confirm" elements' clicks

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -76,7 +76,7 @@
 </footer>
 
 <script type="text/javascript">
-	(function($){
+	$(function($){
 		// LOADER
 		$('#ns-loader').css('opacity', 0);
 
@@ -120,7 +120,15 @@
 				}
 			}).disableSelection();
 		});
-	})(jQuery);
+
+		// CONFIRM BUTTONS
+		$('.ns-confirm').click(function(){
+			if (confirm('Вы уверены?')) {
+				location.href = $(this).attr('href');
+			}
+			return false;
+		});
+	});
 </script>
 
 {% block foot_script %}
