--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -40,7 +40,7 @@
             <a class="brand" href="{{ path('ns_admin_index') }}">Engine</a>
 
             <div class="nav-collapse collapse">
-                {{ knp_menu_render('main', { depth: 1, currentClass: 'active' }) }}
+                {{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active' }) }}
             </div>
 
 			<div class="nav-collapse collapse pull-right">
@@ -52,7 +52,7 @@
 
 <div class="container" style="margin-top: 30px">
     {% block content %}
-        Default content
+		&nbsp;
     {% endblock %}
 </div>
 
