NEW Added jQuery Values plugin

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -134,6 +134,9 @@
 	<script src="{{ asset('bundles/nsadmin/dynatree/jquery/jquery.cookie.js') }}"></script>
 	<script src="{{ asset('bundles/nsadmin/dynatree/dist/jquery.dynatree.min.js') }}"></script>
 
+	{# jQuery Values #}
+	<script src="{{ asset('bundles/nsadmin/jquery/jquery.values.min.js') }}"></script>
+
     {# To only use a subset or add more js overwrite and copy paste this block
     To speed up page loads save a copy of jQuery in your project and override this block to include the correct path
     Otherwise the regeneration is done on every load in dev more with use_controller: true
