--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -19,3 +19,17 @@ form .control-group textarea {
 	margin: 10px 10px 0 0;
 	width:20px;
 }
+
+.multi-action {
+	border-top: solid 1px #ddd;
+	display: none;
+	height: 0;
+	margin-top: -20px;
+	padding-top: 10px;
+}
+.multi-action i {
+	margin-left: 8px;
+}
+.multi-action .btn-group {
+	padding-left: 13px;
+}
