NEW Added some resources to repository

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -168,21 +168,21 @@
 	{{ tinymce_init() }}
 
 	<!-- The Load Image plugin is included for the preview images and image resizing functionality -->
-	<script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>
+	<script src="{{ asset('bundles/nsadmin/load-image/load-image.min.js') }}"></script>
 
 	<!-- The Canvas to Blob plugin is included for image resizing functionality -->
-	<script src="http://blueimp.github.com/JavaScript-Canvas-to-Blob/canvas-to-blob.min.js"></script>
+	<script src="{{ asset('bundles/nsadmin/load-image/canvas-to-blob.min.js') }}"></script>
 
 	<!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
 	<script src="{{ asset('bundles/nsadmin/jquery-file-upload/js/jquery.iframe-transport.js') }}"></script>
 
-	{#<!-- The basic File Upload plugin -->#}
+	<!-- The basic File Upload plugin -->
 	<script src="{{ asset('bundles/nsadmin/jquery-file-upload/js/jquery.fileupload.js') }}"></script>
 
 	<!-- The File Upload file processing plugin -->
 	<script src="{{ asset('bundles/nsadmin/jquery-file-upload/js/jquery.fileupload-fp.js') }}"></script>
 
-	<script src="https://raw.github.com/betamax/getImageData/master/jquery.getimagedata.min.js"></script>
+	<script src="{{ asset('bundles/nsadmin/load-image/jquery.getimagedata.min.js') }}"></script>
 {% endblock foot_script %}
 
 </body>
