FIX Removed escaping in generic tree item href template

--- a/Resources/views/Generic/side-tree-widget.html.twig
+++ b/Resources/views/Generic/side-tree-widget.html.twig
@@ -99,7 +99,7 @@
 		{# Redirects page on node activation #}
 		{% if activateUrl is defined %}
 			el.on('node-activate', function(e, key){
-				location.href = '{{ activateUrl }}'.replace('{key}', key);
+				location.href = '{{ activateUrl|raw }}'.replace('{key}', key);
 			});
 		{% endif %}
 
