--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
     <title>Admin panel</title>
+
+	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% stylesheets filter='cssrewrite'
@@ -45,7 +46,9 @@
             <a class="brand" href="{{ path('ns_admin_index') }}">Engine</a>
 
             <div class="nav-collapse collapse">
-                {{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active' }) }}
+				{% if is_granted("ROLE_ADMIN") %}
+					{{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active' }) }}
+				{% endif %}
             </div>
 
 			<div class="nav-collapse collapse pull-right">
