NEW Added multi image type 'multiple' option

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -156,11 +156,15 @@
 					{% endif %}
 
 					var fnToHidden = function() {
-						var a = [];
-						elFiles.find('.thumbnail').each(function(idx, elFile){
-							a.push($(elFile).data('name'));
-						});
-						elHidden.val(a.join(';'));
+						{% if multiple %}
+							var a = [];
+							elFiles.find('.thumbnail').each(function(idx, elFile){
+								a.push($(elFile).data('name'));
+							});
+							elHidden.val(a.join(';'));
+						{% else %}
+							elHidden.val(elFiles.find('.thumbnail:first').data('name'));
+						{% endif %}
 					};
 
 					elInput.fileupload({
