--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Allura);
+
 body {
 	position: relative;
 	padding-top: 40px;
@@ -32,4 +34,11 @@ form .control-group textarea {
 }
 .multi-action .btn-group {
 	padding-left: 13px;
+}
+
+.ns-sincerely a {
+	font-family: 'Allura', cursive;
+	font-size: 20px;
+	background: url('/bundles/nsadmin/images/ns.png') no-repeat 100% 50%;
+	padding: 10px 55px 0 0;
 }
