--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -77,14 +77,11 @@
     <hr/>
     <div class="container">
         <p class="pull-right ns-sincerely">
-			{#&copy;&nbsp;2012&mdash;{{ "now"|date("Y") }} ООО <a href="http://neosense.ru" target="_blank">«Неосенс»</a>#}
 			<a href="http://neosense.ru" target="_blank">Sincerely</a>
         </p>
 		{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-			{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-			<a href="{{ path('fos_user_security_logout') }}">
-				{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-			</a>
+			<i class="icon-user"></i>&nbsp;{{ app.user.username }} |
+			<a href="{{ url('fos_user_security_logout') }}">выйти</a>
 		{% else %}
 			<a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
 		{% endif %}
