--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -222,3 +222,92 @@
 		</div>
 	{% endspaceless %}
 {% endblock %}
+
+{% block ns_file_select_widget %}
+    {% spaceless %}
+        <div id="{{ form.vars.id }}_control_group" class="control-group ns-multi-image">
+            {{ form_label(form) }}
+            {{ form_errors(form) }}
+            {{ form_widget(form) }}
+
+            <style>
+                .iframe-loader {
+                    width: 128px;
+                    height: 128px;
+                    background: url('/bundles/nsadmin/images/loader-big.gif');
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    margin: -64px 0 0 -64px;
+                    opacity: 0.3;
+                }
+            </style>
+
+            <div>
+                <input type="text" disabled="disabled" value="{{ value|default('Не выбрано') }}" id="{{ form.vars.id }}_input" />
+                <a href="#" class="btn btn-default" style="position: relative;top: -5px;left:2px;" id="{{ form.vars.id }}_trigger">Выбрать</a>
+            </div>
+
+            <div id="{{ form.vars.id }}_dialog" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="{{ form.vars.id }}_dialog_label" aria-hidden="true" style="width:1000px;margin-left:-500px;">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 id="{{ form.vars.id }}_dialog_label">Выберите файл</h3>
+                </div>
+                <div class="modal-body" style="overflow: hidden;">
+                    <div class="iframe-loader"></div>
+                    <iframe src="" style="width:100%;height:400px;border:none" id="{{ form.vars.id }}_iframe"></iframe>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn" data-dismiss="modal" aria-hidden="true">Отменить</button>
+                    <button class="btn btn-success btn-save" id="{{ form.vars.id }}_select">Выбрать</button>
+                </div>
+            </div>
+
+            <script>
+                (function($){
+                    var iframe  = $('#{{ form.vars.id }}_iframe');
+                    var hidden  = $('#{{ form.vars.id }}');
+                    var input   = $('#{{ form.vars.id }}_input');
+                    var trigger = $('#{{ form.vars.id }}_trigger');
+                    var dialog  = $('#{{ form.vars.id }}_dialog');
+                    var select  = $('#{{ form.vars.id }}_select');
+
+                    var fnSelect = function(){
+                        var ef = iframe.get(0).contentWindow.$('#elfinder').elfinder('instance');
+                        if (ef.selected().length) {
+                            var file = ef.path(ef.selected()[0]);
+                            hidden.val(file);
+                            input.val(file);
+                        }
+                        return false;
+                    };
+
+                    trigger.click(function(){
+                        dialog.find('.iframe-loader').show();
+                        iframe.css({opacity:0});
+
+                        dialog.modal('show');
+
+                        iframe.load(function(){
+                            dialog.find('.iframe-loader').hide();
+                            iframe.css({opacity:1});
+
+                            iframe.contents().find('.elfinder-button-icon-getfile').parent().click(function(){
+                                fnSelect();
+                            });
+                        });
+                        iframe.attr('src', '{{ url('elfinder') }}');
+
+                        return false;
+                    });
+
+                    select.click(function(){
+                        fnSelect();
+                        dialog.modal('hide');
+                        return false;
+                    });
+                })(jQuery);
+            </script>
+        </div>
+    {% endspaceless %}
+{% endblock %}
