NEW Added select2

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -10,6 +10,7 @@
         '@MopaBootstrapBundle/Resources/bootstrap/docs/assets/css/bootstrap.css'
         '@MopaBootstrapBundle/Resources/bootstrap/docs/assets/css/bootstrap-responsive.css'
         '@NSAdminBundle/Resources/public/css/style.css'
+        '@NSAdminBundle/Resources/public/select2-3.4.5/select2.css'
     %}
         <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen"/>
     {% endstylesheets %}
@@ -172,6 +173,7 @@
         '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-typeahead.js'
         '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
         '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
+        '@NSAdminBundle/Resources/public/select2-3.4.5/select2.js'
     %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
