--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -181,10 +181,12 @@
         '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-typeahead.js'
         '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
         '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
-        '@NSAdminBundle/Resources/public/select2-3.4.5/select2.js'
     %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
+
+    {# Select 2 #}
+    <script src="{{ asset('bundles/nsadmin/select2-3.4.5/select2.js') }}"></script>
 
 	{{ tinymce_init() }}
 
