--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -61,11 +61,9 @@
 				}
  			</style>
 
-            <a class="brand" href="{{ path('ns_admin_index') }}"><img src="{{ asset('bundles/nsadmin/images/home.png') }}"></a>
-
             <div class="nav-collapse collapse">
 				{% if is_granted("ROLE_ADMIN") %}
-					{{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active' }) }}
+					{{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active', template: 'NSAdminBundle::menu.html.twig' }) }}
 				{% endif %}
             </div>
 
